# Splash

./: .gitignore  CONTRIBUTING.md  Cargo.toml  NOTICE  README.md  SECURITY.md  UPSTREAM.md
.github/workflows/: ci.yml  sustained-fuzz.yml
crates/splash-capabilities/: Cargo.toml
crates/splash-capabilities/src/: bounded_worker.rs  bubblewrap_watchdog.rs  durable_audits.rs  fixed_file_catalog.rs  http_endpoint_catalog.rs  in_process_worker.rs  json_line_worker.rs  lib.rs  linux_network_broker.rs  mobile.rs  multiplexed_worker.rs  platform_keyring_secret_resolver.rs
crates/splash-capabilities/tests/: canonical_profile.rs
crates/splash-cli/: Cargo.toml
crates/splash-cli/src/: main.rs
crates/splash-cli/tests/: cli_contract.rs
crates/splash-core/: Cargo.toml
crates/splash-core/src/: lib.rs  profile.rs
crates/splash-core/tests/: language_profile.rs  makepad_ui_compatibility.rs
crates/splash-core/tests/fixtures/: canonical_constructs.splash  grammar_v0_1.splash  (+3 more)
crates/splash-linux-project-quota/: Cargo.toml
crates/splash-linux-project-quota/src/: lib.rs  linux.rs
crates/splash-linux-seccomp/: Cargo.toml
crates/splash-linux-seccomp/src/: lib.rs  linux.rs
crates/splash-lsp/: Cargo.toml
crates/splash-lsp/src/: main.rs
crates/splash-protocol/: Cargo.toml
crates/splash-protocol/src/: lib.rs
crates/splash-sandbox/: Cargo.toml
crates/splash-sandbox/src/: bubblewrap.rs  cgroup_v2.rs  lib.rs
crates/splash-sandbox/tests/: cgroup_runner.rs  cgroup_v2.rs  landlock_runner.rs  limit_runner.rs  linux_project_quota.rs  seccomp_bubblewrap.rs
crates/splash-schema/: Cargo.toml
crates/splash-schema/src/: lib.rs
crates/splash-storage/: Cargo.toml
crates/splash-storage/src/: https_rollback_anchor.rs  lib.rs  platform_keyring.rs  rollback_anchor_service.rs  sqlite.rs
crates/splash-worker/: Cargo.toml
crates/splash-worker/src/: cancellable.rs  lib.rs  secret_broker.rs
crates/splash-workflow/: Cargo.toml
crates/splash-workflow/src/: bubblewrap_recovery.rs  durable_events.rs  lib.rs  mobile.rs  multiplexed_worker.rs  telemetry.rs
crates/splash-workflow/src/telemetry/: durable.rs
docs/: bubblewrap-recovery.md  capability-audits.md  cross-stream-telemetry.md  development.md  durable-storage.md  external-tools.md  fixed-file-catalog.md  grammar.md  http-endpoint-catalog.md  language-profile.md  linux-bubblewrap.md  makepad-ui-compatibility.md  module-catalog.md  positioning.md  roadmap.md  rollback-anchor-service.md  schema-contracts.md  secret-broker.md  tool-catalog.md  worker-compensation.md  worker-operations.md  worker-protocol.md  worker-runtime.md  workflow-checkpoints.md  workflow-data-catalog.md  workflow-drafts.md  workflow-events.md  workflow-operations.md
examples/: dataflow_input.json  dataflow_workflow_draft.json  deferred_tool_workflow.splash  direct_module_workflow.splash  direct_module_workflow_draft.json  json_tool_workflow.splash  local_workflow_draft.json  makepad_ui_counter.splash  release_workflow_draft.json  tool_workflow.splash
fuzz/: Cargo.toml
fuzz/corpus/bubblewrap_policy/: aggregate.seed  aggregate_rejected.seed  bounded.seed  default.seed  project_quota_raw_root.seed  unsupported.seed
fuzz/corpus/capability_audit_journal/: invalid_retention.json  valid_allowed.json
fuzz/corpus/capability_lease/: dynamic_ungranted.splash  local_await.splash
fuzz/corpus/durable_cross_stream_telemetry/: valid_interleaved.json
fuzz/corpus/execution/: bounded_parse_json_depth.splash  bounded_to_json_cycle.splash  call_frame_limit.splash  core_array.splash  core_json.splash  core_object.splash  core_text.splash  heap_sparse_index_limit.splash  instruction_limit.splash  std_math.splash  string_allocation_limit.splash  structured_dataflow.splash  try_catch.splash  unavailable_tool.splash
fuzz/corpus/execution_limits/: tight_instruction_limit.splash
fuzz/corpus/execution_replay/: core_dataflow.splash  non_json_result.splash  recoverable_failure.splash
fuzz/corpus/http_origin_policy/: default_port.seed  host_case.seed  https_origin.seed  oversized_port.seed  rejected_credentials.seed  rejected_path.seed
fuzz/corpus/lsp_document/: advisory_configuration.json  advisory_configuration_lifecycle.json  baseline.splash  core_array.splash  core_assert.splash  core_import_root.splash  core_import_std.splash  core_json.splash  core_object.splash  core_text.splash  direct_module_input_fields.splash  direct_module_output_aliases.splash  direct_module_output_fields.splash  direct_module_output_nested_fields.splash  module_catalog.splash  module_catalog_root_aliases.splash  static_record_child_aliases.splash  std_math.splash
fuzz/corpus/mobile_dataflow/: basic.json  invalid_global_name.json  nesting_boundary.json
fuzz/corpus/mobile_workflow/: aggregate_output_boundary.json  basic.json  nesting_boundary.json
fuzz/corpus/rollback_anchor_service/: server_valid_compare_and_swap.json  server_valid_load.json  valid_conflict.json  valid_state.json  valid_stored.json
fuzz/corpus/secret_broker/: allowed_grant.seed  exhausted_grant.seed
fuzz/corpus/syntax/: control_dataflow.splash  deferred_tool.splash  import_path_spaced.splash  import_recovery_path.splash  imported_module_aliases.splash  loops_and_lambdas.splash  profile_default_valid.splash  profile_medium_valid.splash  profile_small_valid.splash  profile_tight_valid.splash  static_record_fields.splash  tool_call_hints.splash  try_catch.splash  vm_partial_field_assignment.splash
fuzz/corpus/workflow_draft/: basic.json  dataflow_context.json
fuzz/corpus/workflow_event_journal/: invalid_sequence.json  valid_started.json
fuzz/dictionaries/: syntax.dict
fuzz/fuzz_targets/: bubblewrap_policy.rs  capability_audit_journal.rs  capability_lease.rs  cross_stream_telemetry.rs  durable_cross_stream_telemetry.rs  execution.rs  execution_limits.rs  execution_replay.rs  http_origin_policy.rs  json_line_worker.rs  lsp_document.rs  mobile_dataflow.rs  mobile_workflow.rs  rollback_anchor_service.rs  secret_broker.rs  syntax.rs  workflow_draft.rs  workflow_event_journal.rs  workflow_external_operation.rs
