[package]
name = "splash-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
splash-core = { path = "../crates/splash-core" }

[workspace]
members = ["."]

[[bin]]
name = "syntax"
path = "fuzz_targets/syntax.rs"
test = false
doc = false

[[bin]]
name = "execution"
path = "fuzz_targets/execution.rs"
test = false
doc = false
