[package]
name = "splash-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[dependencies]
libfuzzer-sys = "0.4"
serde_json = "1.0.150"
splash-capabilities = { version = "0.1.0", path = "../crates/splash-capabilities", features = ["durable-audit-journal", "json-line-worker"] }
splash-core = { path = "../crates/splash-core" }
splash-workflow = { version = "0.1.0", path = "../crates/splash-workflow" }

[workspace]
members = ["."]

[[bin]]
name = "syntax"
path = "fuzz_targets/syntax.rs"
test = false
doc = false

[[bin]]
name = "execution"
path = "fuzz_targets/execution.rs"
test = false
doc = false

[[bin]]
name = "execution_limits"
path = "fuzz_targets/execution_limits.rs"
test = false
doc = false

[[bin]]
name = "workflow_draft"
path = "fuzz_targets/workflow_draft.rs"
test = false
doc = false

[[bin]]
name = "capability_lease"
path = "fuzz_targets/capability_lease.rs"
test = false
doc = false

[[bin]]
name = "workflow_external_operation"
path = "fuzz_targets/workflow_external_operation.rs"
test = false
doc = false

[[bin]]
name = "workflow_event_journal"
path = "fuzz_targets/workflow_event_journal.rs"
test = false
doc = false

[[bin]]
name = "capability_audit_journal"
path = "fuzz_targets/capability_audit_journal.rs"
test = false
doc = false

[[bin]]
name = "json_line_worker"
path = "fuzz_targets/json_line_worker.rs"
test = false
doc = false
