[package]
name = "splash-fuzz"
version = "0.0.0"
edition = "2021"
publish = false

[package.metadata]
cargo-fuzz = true

[lints.rust]
unexpected_cfgs = { level = "warn", check-cfg = ["cfg(fuzzing)"] }

[dependencies]
libfuzzer-sys = "0.4"
lsp-server = "0.9.0"
lsp-types = "0.97.0"
serde_json = "1.0.150"
splash-capabilities = { version = "0.1.0", path = "../crates/splash-capabilities", features = ["durable-audit-journal", "http-endpoint-catalog", "json-line-worker"] }
splash-core = { path = "../crates/splash-core" }
splash-protocol = { version = "0.1.0", path = "../crates/splash-protocol" }
splash-sandbox = { version = "0.1.0", path = "../crates/splash-sandbox" }
splash-workflow = { version = "0.1.0", path = "../crates/splash-workflow" }

[workspace]
members = ["."]

[[bin]]
name = "syntax"
path = "fuzz_targets/syntax.rs"
test = false
doc = false

[[bin]]
name = "lsp_document"
path = "fuzz_targets/lsp_document.rs"
test = false
doc = false

[[bin]]
name = "execution"
path = "fuzz_targets/execution.rs"
test = false
doc = false

[[bin]]
name = "execution_limits"
path = "fuzz_targets/execution_limits.rs"
test = false
doc = false

[[bin]]
name = "workflow_draft"
path = "fuzz_targets/workflow_draft.rs"
test = false
doc = false

[[bin]]
name = "capability_lease"
path = "fuzz_targets/capability_lease.rs"
test = false
doc = false

[[bin]]
name = "workflow_external_operation"
path = "fuzz_targets/workflow_external_operation.rs"
test = false
doc = false

[[bin]]
name = "workflow_event_journal"
path = "fuzz_targets/workflow_event_journal.rs"
test = false
doc = false

[[bin]]
name = "capability_audit_journal"
path = "fuzz_targets/capability_audit_journal.rs"
test = false
doc = false

[[bin]]
name = "cross_stream_telemetry"
path = "fuzz_targets/cross_stream_telemetry.rs"
test = false
doc = false

[[bin]]
name = "durable_cross_stream_telemetry"
path = "fuzz_targets/durable_cross_stream_telemetry.rs"
test = false
doc = false

[[bin]]
name = "json_line_worker"
path = "fuzz_targets/json_line_worker.rs"
test = false
doc = false

[[bin]]
name = "bubblewrap_policy"
path = "fuzz_targets/bubblewrap_policy.rs"
test = false
doc = false

[[bin]]
name = "http_origin_policy"
path = "fuzz_targets/http_origin_policy.rs"
test = false
doc = false
