[package]
name = "splash-capabilities"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability-gated tool host for Splash"

[lints]
workspace = true

[dependencies]
makepad-script = { path = "../../vendor/makepad/platform/script" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
splash-core = { path = "../splash-core" }
splash-protocol = { version = "0.1.0", path = "../splash-protocol" }
splash-schema = { version = "0.1.0", path = "../splash-schema" }
splash-worker = { version = "0.1.0", path = "../splash-worker", optional = true }

[features]
in-process-worker = ["dep:splash-worker"]
json-line-worker = []
