[package]
name = "splash-capabilities"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability-gated tool host for Splash"

[lints]
workspace = true

[dependencies]
blake3 = { version = "1.8.5", features = ["pure"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
makepad-script = { path = "../../vendor/makepad/platform/script" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
splash-core = { path = "../splash-core" }
splash-protocol = { version = "0.1.0", path = "../splash-protocol" }
splash-sandbox = { version = "0.1.0", path = "../splash-sandbox", optional = true }
splash-schema = { version = "0.1.0", path = "../splash-schema" }
splash-worker = { version = "0.1.0", path = "../splash-worker", optional = true }
ureq = { version = "3.3.0", default-features = false, features = ["rustls"], optional = true }

[features]
bubblewrap-watchdog = ["dep:splash-sandbox"]
in-process-worker = ["dep:splash-worker"]
json-line-worker = []
http-endpoint-catalog = ["dep:ureq"]
