[package]
name = "splash-capabilities"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability-gated tool host for Splash"

[lints]
workspace = true

[dependencies]
blake3 = { version = "1.8.5", features = ["pure"] }
getrandom = { version = "0.3.4", features = ["wasm_js"] }
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native"], optional = true }
makepad-script = { path = "../../vendor/makepad/platform/script" }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
splash-core = { path = "../splash-core" }
splash-protocol = { version = "0.1.0", path = "../splash-protocol" }
splash-sandbox = { version = "0.1.0", path = "../splash-sandbox", optional = true }
splash-schema = { version = "0.1.0", path = "../splash-schema" }
splash-storage = { version = "0.1.0", path = "../splash-storage", optional = true }
splash-worker = { version = "0.1.0", path = "../splash-worker", optional = true }
ureq = { version = "3.3.0", default-features = false, features = ["rustls"], optional = true }
zeroize = { version = "1.9.0", optional = true }

[features]
bubblewrap-watchdog = ["dep:splash-sandbox"]
in-process-worker = ["dep:splash-worker"]
json-line-worker = []
http-endpoint-catalog = ["dep:ureq", "dep:zeroize"]
platform-keyring-secret-resolver = ["http-endpoint-catalog", "dep:keyring"]
platform-keyring-worker-secret-provider = ["dep:keyring", "dep:splash-worker"]
durable-audit-journal = ["dep:splash-storage"]
