[package]
name = "splash-cli"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Command-line runner for Splash scripts"

[lints]
workspace = true

[[bin]]
name = "splash"
path = "src/main.rs"

[dependencies]
splash-capabilities = { path = "../splash-capabilities" }
splash-core = { path = "../splash-core" }
