[package]
name = "splash-linux-seccomp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Audited Linux seccomp filter installation for Splash containment"

# This is the sole workspace crate that crosses the seccomp syscall ABI.
# Its public API accepts only bounded, owned cBPF bytes and keeps unsafe
# pointer construction out of policy code and pre-exec runners.
[lints.rust]
unsafe_code = "allow"
unsafe_op_in_unsafe_fn = "deny"

[lints.clippy]
undocumented_unsafe_blocks = "deny"

[target.'cfg(target_os = "linux")'.dependencies]
libc = "0.2.186"
linux-raw-sys = { version = "0.12.1", features = ["ptrace", "prctl"] }
