[package]
name = "splash-lsp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Language server for canonical Splash source"

[lints]
workspace = true

[dependencies]
lsp-server = "0.9.0"
lsp-types = "0.97.0"
serde_json = "1.0.150"
splash-core = { path = "../splash-core" }
