[package]
name = "splash-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability-attenuated worker protocol for Splash"

[lints]
workspace = true

[dependencies]
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
