[package]
name = "splash-protocol"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability-attenuated worker protocol for Splash"

[lints]
workspace = true

[dependencies]
blake3 = { version = "1.8.5", features = ["pure"] }
constant_time_eq = "0.4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.150"
