[package]
name = "splash-sandbox"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform containment policies for Splash workers"

[lints]
workspace = true

[dependencies]
close_fds = "0.3.2"
rustix = { version = "1.1.4", features = ["process"] }
splash-protocol = { version = "0.1.0", path = "../splash-protocol" }
