[package]
name = "splash-sandbox"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Platform containment policies for Splash workers"

[lints]
workspace = true

[dependencies]
splash-protocol = { version = "0.1.0", path = "../splash-protocol" }

[target.'cfg(target_os = "linux")'.dependencies]
close_fds = "0.3.2"
landlock = "0.4.5"
linux-raw-sys = { version = "0.12.1", features = ["general", "ioctl", "ptrace"] }
rustix = { version = "1.1.4", features = ["fs", "process"] }
splash-linux-project-quota = { version = "0.1.0", path = "../splash-linux-project-quota" }
