[package]
name = "splash-storage"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Host-only authenticated durable-record boundary for Splash"

[lints]
workspace = true

[dependencies]
base64 = "0.22.1"
blake3 = { version = "1.8.5", features = ["pure"] }
keyring = { version = "3.6.3", default-features = false, features = ["apple-native", "windows-native"], optional = true }
rusqlite = { version = "0.40.1", features = ["bundled"], optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
subtle = "2.6.1"
ureq = { version = "3.3.0", default-features = false, features = ["rustls"], optional = true }
zeroize = "1.8.2"

[features]
sqlite = ["dep:rusqlite"]
keyring = ["dep:keyring"]
https-rollback-anchor = ["dep:ureq"]
