[package]
name = "splash-worker"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Capability-scoped worker runtime for Splash Rust adapters"

[lints]
workspace = true

[features]
sqlite = ["splash-storage/sqlite"]

[dependencies]
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
splash-protocol = { version = "0.1.0", path = "../splash-protocol" }
splash-storage = { version = "0.1.0", path = "../splash-storage" }
