[package]
name = "splash-workflow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Host-owned planning and execution for Splash workflows"

[lints]
workspace = true

[dependencies]
blake3 = { version = "1.8.5", features = ["pure"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
splash-capabilities = { path = "../splash-capabilities" }
splash-core = { path = "../splash-core" }
