[package]
name = "splash-workflow"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Host-owned planning and execution for Splash workflows"

[lints]
workspace = true

[dependencies]
blake3 = { version = "1.8.5", features = ["pure"] }
getrandom = { version = "0.3.4", optional = true }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.150"
splash-capabilities = { path = "../splash-capabilities" }
splash-core = { path = "../splash-core" }
splash-protocol = { version = "0.1.0", path = "../splash-protocol" }
splash-sandbox = { version = "0.1.0", path = "../splash-sandbox", optional = true }
splash-schema = { version = "0.1.0", path = "../splash-schema" }
splash-storage = { version = "0.1.0", path = "../splash-storage" }

[features]
http-endpoint-catalog = ["splash-capabilities/http-endpoint-catalog"]
platform-keyring-secret-resolver = [
    "http-endpoint-catalog",
    "splash-capabilities/platform-keyring-secret-resolver",
]
multiplexed-worker = ["splash-capabilities/json-line-worker"]
bubblewrap-recovery = [
    "dep:getrandom",
    "dep:splash-sandbox",
    "multiplexed-worker",
]
